public/css/style.css
/* ... */
.btn__choix:hover {
  background-color: #f2eafb;
  transition: all 300ms ease-in-out;
}
.btn__choix:hover .fa-solid {
  color: #9356dc;
  transition: all 300ms;
}
.btn__choix__txt {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}
.btn__choix__txt .fa-solid {
  display: inline-block;
  color: #848484;
  margin: 0 10px 0px 25px;
}
.btn__purple-dot {
  display: inline-block;
  background-color: #9356DC;
  height: 25px;
  width: 25px;
  border-radius: 50%;
  color: #fff;
  line-height: 25px;
  position: absolute;
  left: -12.5px;
  bottom: 33%;
  font-size: 1.1rem;
  padding: 0 5px;
  text-align: center;
}

.card {
  width: 100%;
  position: relative;
  background-color: white;
  border-radius: 20px;
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
}
.card__description {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  padding: 15px;
}
.card a {
  text-decoration: none;
  color: black;
}
.card__chip {
  background: #99e2d0;
  color: #278870;
  font-size: 1.2rem;
  position: absolute;
  top: 20px;
  right: 20px;
  padding: 5px 10px;
  border-radius: 3px;
  font-weight: 400;
}

.card img {
  box-sizing: border-box;
  width: 100%;
  height: 175px;
  object-fit: cover;
  object-position: center;
  border: 0px solid #FFFFFF;
  border-radius: 20px 20px 0px 0px;
}

.heart {
  position: absolute;
  top: 15px;
  right: 7%;
  font-size: 1.4rem;
}
.heart:hover {
  visibility: hidden;
  transition: all 200ms;
}
.heart__filled {
  position: absolute;
  top: 15px;
  right: 7%;
  opacity: 1;
  font-size: 1.4rem;
  background: linear-gradient(to bottom, #9356DC, #FF79DA);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  opacity: 0;
}
.heart__filled:hover {
  opacity: 1;
  transition: all 200ms;
}

header {
  margin: 0 0 5px 0;
  padding: 20px;
  box-shadow: 0px 3px 8px #999;
  background-color: #fff;
  text-align: center;
}

.exploration {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  gap: 30px;
  padding: 50px 30px;
  background-color: #F5F5F5;
}
.exploration h2 {
  font-size: 1.1rem;
}

.fonctionnement,
.restaurants {
  padding: 30px 20px;
  margin-top: 40px;
}

header h1 {
  font-family: "Shrikhand", cursive;
  color: black;
  font-size: 2rem;
}

main {
  display: flex;
  flex-direction: column;
}

.location {
  display: flex;
  justify-content: center;
  gap: 10px;
  background-color: #E5E5E5;
  text-align: center;
  padding: 10px 0px;
  color: #232323;
}

.btns {
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
  margin-top: 30px;
}

.restaurants {
  margin: 20px 0 40px 0;
}

.cards {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  margin-top: 30px;
}

footer {
  display: flex;
  flex-direction: column;
  gap: 7px;
  background-color: #232323;
  color: #fff;
  font-family: Roboto;
  padding: 20px;
  font-weight: 400;
}
footer a {
  text-decoration: none;
  color: #fff;
}

footer h1 {
  font-family: "Shrikhand", cursive;
  font-size: 1.2rem;
  margin-bottom: 10px;
}

footer .fa-solid {
  margin-right: 10px;
  font-size: 0.8rem;
}

@media screen and (min-width: 767.98px) {
  .btns {
    display: grid;
    grid-template-columns: 30% 30% 30%;
    column-gap: 20px;
    justify-content: space-around;
  }
  .cards {
    display: grid;
    grid-template-columns: 48% 48%;
    justify-content: space-around;
  }
}
@media screen and (min-width: 1023.98px) {
  .cards {
    display: grid;
    grid-template-columns: 22% 22% 22% 22%;
    justify-content: space-between;
  }
  .explo-fonctionnement {
    display: grid;
    grid-template-columns: 60% 40%;
    justify-content: center;
    background-color: #F5F5F5;
  }
  .exploration,
  .fonctionnement {
    margin-top: 20px;
    padding: 50px 50px;
    justify-content: flex-start;
    text-align: left;
  }
  .btns {
    display: flex;
    flex-direction: column;
  }
  .btn {
    margin: 20px 0px;
    max-width: 520px;
  }
  .btn__choix {
    background-color: #fff;
  }
  .restaurants {
    padding: 20px 50px;
  }
  footer {
    padding: 20px 50px;
  }
}

/*# sourceMappingURL=style.css.map */

